# eng-orc

./: .gitignore  ARCHITECTURE.md  Makefile  README.md  chat-gpt-ideas.txt  current-status.txt  langgraph-harness.py  last-log.txt  orc-report.md  pyproject.toml  pyrightconfig.json
docs/: MODELS.md  OPERATIONS.md  TROUBLESHOOTING.md
examples/missions/: fastapi-notes.md
scripts/: common.sh  download_models.sh  setup_wsl.sh  start_stack.sh  stop_stack.sh
scripts/systemd/: llama-swap.service
server/: wslconfig.sample
server/letta/: .env.example  docker-compose.yml
server/profiles/balanced-12gb/: llama-swap.yaml  models.txt  orc-models.yaml
server/profiles/classic-12gb/: llama-swap.yaml  models.txt  orc-models.yaml
server/profiles/max-64gb/: llama-swap.yaml  models.txt  orc-models.yaml
server/profiles/max-64gb-ram/: llama-swap.yaml  models.txt  orc-models.yaml
src/engorc/: __init__.py  artifacts.py  bugreport.py  cli.py  config.py  decisions.py  events.py  fsio.py  gates.py  intake.py  interactive.py  plan.py  project.py  registry.py  selftest.py  sessions.py  util.py
src/engorc/agents/: __init__.py  roles.py  runtime.py  (+1 more)
tests/: conftest.py  test_bugreport.py  test_console.py  test_core_state.py  test_dashboard.py  test_e2e_selftest.py  test_guidance_and_diagnostics.py  test_intake_and_request.py  test_livelock_guards.py  test_llm_layer.py  test_memory_and_scheduler.py  test_plan_review_and_consult.py  test_project_venv.py  test_review_panel.py  test_rotation.py  test_sessions.py  test_sync.py  test_tdd_cycle.py  test_timeline.py  test_toolbox_and_context.py  test_wrap_confirmation.py
tmp/: plan.yaml
(+49 files in other folders)
